--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 packaging==23.2
+passlib==1.7.4
 pep8==1.7.1
 PyJWT==2.8.0
 python-dotenv==1.0.0
